bdr.BDR.scala.error
Erreur de compilation :
BDR:4: error: '(' expected but '{' found.
 else if {litMessage() == "Z"
         ^BDR:20: error: illegal start of simple expression
} 
^